# ALIKE-cpp

./: .gitignore  CMakeLists.txt
cmake/: ALIKEConfig.cmake.in  ALIKE_cppConfig.cmake.in
include/ALIKE_cpp/: alike.hpp  get_patches.hpp  get_patches_cuda.h  image_loader.hpp  soft_detect.hpp  utils.hpp
src/: get_patches.cu
test/: CMakeLists.txt  main.cpp
